Fixed config port issues

--- a/.env
+++ b/.env
@@ -1,1 +1,11 @@
 VITE_API_URL=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=AIzaSyDcojoT77nx6E1E-UzIr12GyoryB1zj078
+
+
+VITE_FIREBASE_API_KEY=AIzaSyD3F0SKl5WYVIzIRSevQTtX2X30SvspVEM
+VITE_FIREBASE_AUTH_DOMAIN=brainybucks-d8c0f.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=brainybucks-d8c0f
+VITE_FIREBASE_STORAGE_BUCKET=brainybucks-d8c0f.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=236075202641
+VITE_FIREBASE_APP_ID=1:236075202641:web:fa8f5370e467b0f2cea070
+VITE_FIREBASE_MEASUREMENT_ID=G-Y7S4LRCLR5
+
