--- a/functions/package.json
+++ b/functions/package.json
@@ -9,12 +9,13 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "22"
+    "node": "18"
   },
   "main": "index.js",
   "dependencies": {
-    "firebase-admin": "^12.6.0",
-    "firebase-functions": "^6.0.1",
+    "@sendgrid/mail": "^8.1.5",
+    "firebase-admin": "^13.4.0",
+    "firebase-functions": "^6.3.2",
     "nodemailer": "^7.0.3"
   },
   "devDependencies": {
